[tool.poetry]
name = "pyorb"
version = "0.1.0"
description = ""
authors = ["klem.alva <klem.alva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
litestar = {extras = ["standard"], version = "^2.5.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
